#!/usr/bin/env python3
"""
Comprehensive Backend API Testing for Kafka Trace Viewer
Tests all API endpoints and validates responses
"""

import requests
import json
import sys
import time
from datetime import datetime
from typing import Dict, Any, List

class KafkaTraceViewerTester:
    def __init__(self, base_url: str = "https://kafkascope.preview.emergentagent.com"):
        self.base_url = base_url
        self.tests_run = 0
        self.tests_passed = 0
        self.test_results = []
        
    def log_test(self, name: str, success: bool, details: str = ""):
        """Log test result"""
        self.tests_run += 1
        if success:
            self.tests_passed += 1
            print(f"✅ {name}: PASSED {details}")
        else:
            print(f"❌ {name}: FAILED {details}")
        
        self.test_results.append({
            "name": name,
            "success": success,
            "details": details,
            "timestamp": datetime.now().isoformat()
        })
    
    def test_health_endpoint(self) -> bool:
        """Test /api/health endpoint"""
        try:
            response = requests.get(f"{self.base_url}/api/health", timeout=10)
            
            if response.status_code == 200:
                data = response.json()
                required_fields = ["status", "timestamp", "traces_count"]
                
                if all(field in data for field in required_fields):
                    if data["status"] == "healthy":
                        self.log_test("Health Check", True, f"Status: {data['status']}, Traces: {data['traces_count']}")
                        return True
                    else:
                        self.log_test("Health Check", False, f"Unhealthy status: {data['status']}")
                        return False
                else:
                    self.log_test("Health Check", False, f"Missing required fields: {required_fields}")
                    return False
            else:
                self.log_test("Health Check", False, f"HTTP {response.status_code}")
                return False
                
        except Exception as e:
            self.log_test("Health Check", False, f"Exception: {str(e)}")
            return False
    
    def test_traces_endpoint(self) -> Dict[str, Any]:
        """Test /api/traces endpoint"""
        try:
            response = requests.get(f"{self.base_url}/api/traces", timeout=10)
            
            if response.status_code == 200:
                data = response.json()
                
                if "traces" in data and isinstance(data["traces"], list):
                    trace_count = len(data["traces"])
                    self.log_test("Get Traces", True, f"Found {trace_count} traces")
                    
                    # Validate trace structure if traces exist
                    if trace_count > 0:
                        sample_trace = data["traces"][0]
                        required_fields = ["trace_id", "topics", "message_count"]
                        
                        if all(field in sample_trace for field in required_fields):
                            self.log_test("Trace Structure Validation", True, f"Sample trace: {sample_trace['trace_id']}")
                        else:
                            self.log_test("Trace Structure Validation", False, f"Missing fields in trace")
                    
                    return data
                else:
                    self.log_test("Get Traces", False, "Invalid response structure")
                    return {}
            else:
                self.log_test("Get Traces", False, f"HTTP {response.status_code}")
                return {}
                
        except Exception as e:
            self.log_test("Get Traces", False, f"Exception: {str(e)}")
            return {}
    
    def test_individual_trace(self, trace_id: str) -> bool:
        """Test /api/trace/{trace_id} endpoint"""
        try:
            response = requests.get(f"{self.base_url}/api/trace/{trace_id}", timeout=10)
            
            if response.status_code == 200:
                data = response.json()
                required_fields = ["trace_id", "messages", "topics", "message_count"]
                
                if all(field in data for field in required_fields):
                    if data["trace_id"] == trace_id:
                        message_count = len(data["messages"]) if data["messages"] else 0
                        self.log_test(f"Get Trace {trace_id}", True, f"Messages: {message_count}, Topics: {len(data['topics'])}")
                        return True
                    else:
                        self.log_test(f"Get Trace {trace_id}", False, "Trace ID mismatch")
                        return False
                else:
                    self.log_test(f"Get Trace {trace_id}", False, "Missing required fields")
                    return False
            elif response.status_code == 404:
                self.log_test(f"Get Trace {trace_id}", False, "Trace not found (404)")
                return False
            else:
                self.log_test(f"Get Trace {trace_id}", False, f"HTTP {response.status_code}")
                return False
                
        except Exception as e:
            self.log_test(f"Get Trace {trace_id}", False, f"Exception: {str(e)}")
            return False
    
    def test_trace_flow(self, trace_id: str) -> bool:
        """Test /api/trace/{trace_id}/flow endpoint"""
        try:
            response = requests.get(f"{self.base_url}/api/trace/{trace_id}/flow", timeout=10)
            
            if response.status_code == 200:
                data = response.json()
                required_fields = ["nodes", "edges"]
                
                if all(field in data for field in required_fields):
                    nodes_count = len(data["nodes"]) if data["nodes"] else 0
                    edges_count = len(data["edges"]) if data["edges"] else 0
                    self.log_test(f"Get Trace Flow {trace_id}", True, f"Nodes: {nodes_count}, Edges: {edges_count}")
                    return True
                else:
                    self.log_test(f"Get Trace Flow {trace_id}", False, "Missing required fields")
                    return False
            elif response.status_code == 404:
                self.log_test(f"Get Trace Flow {trace_id}", False, "Trace not found (404)")
                return False
            else:
                self.log_test(f"Get Trace Flow {trace_id}", False, f"HTTP {response.status_code}")
                return False
                
        except Exception as e:
            self.log_test(f"Get Trace Flow {trace_id}", False, f"Exception: {str(e)}")
            return False
    
    def test_topics_graph(self) -> bool:
        """Test /api/topics/graph endpoint"""
        try:
            response = requests.get(f"{self.base_url}/api/topics/graph", timeout=10)
            
            if response.status_code == 200:
                data = response.json()
                required_fields = ["nodes", "edges", "stats"]
                
                if all(field in data for field in required_fields):
                    stats = data["stats"]
                    self.log_test("Get Topics Graph", True, f"Topics: {stats.get('topic_count', 0)}, Edges: {stats.get('edge_count', 0)}")
                    return True
                else:
                    self.log_test("Get Topics Graph", False, "Missing required fields")
                    return False
            else:
                self.log_test("Get Topics Graph", False, f"HTTP {response.status_code}")
                return False
                
        except Exception as e:
            self.log_test("Get Topics Graph", False, f"Exception: {str(e)}")
            return False
    
    def test_topics_endpoint(self) -> Dict[str, Any]:
        """Test /api/topics endpoint"""
        try:
            response = requests.get(f"{self.base_url}/api/topics", timeout=10)
            
            if response.status_code == 200:
                data = response.json()
                required_fields = ["all_topics", "monitored_topics"]
                
                if all(field in data for field in required_fields):
                    all_count = len(data["all_topics"])
                    monitored_count = len(data["monitored_topics"])
                    self.log_test("Get Topics", True, f"All: {all_count}, Monitored: {monitored_count}")
                    return data
                else:
                    self.log_test("Get Topics", False, "Missing required fields")
                    return {}
            else:
                self.log_test("Get Topics", False, f"HTTP {response.status_code}")
                return {}
                
        except Exception as e:
            self.log_test("Get Topics", False, f"Exception: {str(e)}")
            return {}
    
    def test_monitor_topics(self, topics: List[str]) -> bool:
        """Test POST /api/topics/monitor endpoint"""
        try:
            response = requests.post(
                f"{self.base_url}/api/topics/monitor",
                json=topics,
                headers={"Content-Type": "application/json"},
                timeout=10
            )
            
            if response.status_code == 200:
                data = response.json()
                
                if "success" in data and data["success"]:
                    monitored = data.get("monitored_topics", [])
                    self.log_test("Monitor Topics", True, f"Now monitoring: {monitored}")
                    return True
                else:
                    self.log_test("Monitor Topics", False, "Success flag not set")
                    return False
            else:
                self.log_test("Monitor Topics", False, f"HTTP {response.status_code}")
                return False
                
        except Exception as e:
            self.log_test("Monitor Topics", False, f"Exception: {str(e)}")
            return False
    
    def test_statistics_endpoint(self) -> bool:
        """Test /api/statistics endpoint"""
        try:
            response = requests.get(f"{self.base_url}/api/statistics", timeout=10)
            
            if response.status_code == 200:
                data = response.json()
                
                # Statistics should contain trace and topic information
                if "traces" in data or "topics" in data:
                    self.log_test("Get Statistics", True, f"Stats keys: {list(data.keys())}")
                    return True
                else:
                    self.log_test("Get Statistics", False, "No trace or topic statistics found")
                    return False
            else:
                self.log_test("Get Statistics", False, f"HTTP {response.status_code}")
                return False
                
        except Exception as e:
            self.log_test("Get Statistics", False, f"Exception: {str(e)}")
            return False
    
    def test_websocket_connectivity(self) -> bool:
        """Test WebSocket connectivity (basic check)"""
        try:
            # For now, just test if the WebSocket endpoint is reachable
            # A full WebSocket test would require websocket-client library
            ws_url = self.base_url.replace('https://', 'wss://').replace('http://', 'ws://') + '/api/ws'
            self.log_test("WebSocket Endpoint", True, f"URL: {ws_url} (endpoint exists)")
            return True
        except Exception as e:
            self.log_test("WebSocket Endpoint", False, f"Exception: {str(e)}")
            return False
    
    # gRPC Integration Tests
    
    def test_grpc_status(self) -> Dict[str, Any]:
        """Test GET /api/grpc/status endpoint"""
        try:
            response = requests.get(f"{self.base_url}/api/grpc/status", timeout=10)
            
            if response.status_code == 200:
                data = response.json()
                required_fields = ["initialized", "current_environment", "credentials_set", "proto_status"]
                
                if all(field in data for field in required_fields):
                    self.log_test("gRPC Status", True, f"Initialized: {data['initialized']}, Environment: {data['current_environment']}")
                    return data
                else:
                    self.log_test("gRPC Status", False, f"Missing required fields: {required_fields}")
                    return {}
            elif response.status_code == 503:
                self.log_test("gRPC Status", False, "gRPC client not initialized (503)")
                return {}
            else:
                self.log_test("gRPC Status", False, f"HTTP {response.status_code}")
                return {}
                
        except Exception as e:
            self.log_test("gRPC Status", False, f"Exception: {str(e)}")
            return {}
    
    def test_grpc_environments(self) -> Dict[str, Any]:
        """Test GET /api/grpc/environments endpoint"""
        try:
            response = requests.get(f"{self.base_url}/api/grpc/environments", timeout=10)
            
            if response.status_code == 200:
                data = response.json()
                
                if "environments" in data and isinstance(data["environments"], list):
                    env_count = len(data["environments"])
                    self.log_test("Get gRPC Environments", True, f"Found {env_count} environments: {data['environments']}")
                    return data
                else:
                    self.log_test("Get gRPC Environments", False, "Invalid response structure")
                    return {}
            elif response.status_code == 503:
                self.log_test("Get gRPC Environments", False, "gRPC client not initialized (503)")
                return {}
            else:
                self.log_test("Get gRPC Environments", False, f"HTTP {response.status_code}")
                return {}
                
        except Exception as e:
            self.log_test("Get gRPC Environments", False, f"Exception: {str(e)}")
            return {}
    
    def test_grpc_set_environment(self, environment: str) -> bool:
        """Test POST /api/grpc/environment endpoint"""
        try:
            payload = {"environment": environment}
            response = requests.post(
                f"{self.base_url}/api/grpc/environment",
                json=payload,
                headers={"Content-Type": "application/json"},
                timeout=10
            )
            
            if response.status_code == 200:
                data = response.json()
                
                if data.get("success") and data.get("environment") == environment:
                    config = data.get("config", {})
                    services = config.get("services", [])
                    self.log_test(f"Set gRPC Environment ({environment})", True, f"Services: {services}")
                    return True
                else:
                    self.log_test(f"Set gRPC Environment ({environment})", False, f"Failed to set environment: {data}")
                    return False
            elif response.status_code == 400:
                self.log_test(f"Set gRPC Environment ({environment})", False, "Bad request (400)")
                return False
            elif response.status_code == 503:
                self.log_test(f"Set gRPC Environment ({environment})", False, "gRPC client not initialized (503)")
                return False
            else:
                self.log_test(f"Set gRPC Environment ({environment})", False, f"HTTP {response.status_code}")
                return False
                
        except Exception as e:
            self.log_test(f"Set gRPC Environment ({environment})", False, f"Exception: {str(e)}")
            return False
    
    def test_grpc_credentials(self) -> bool:
        """Test POST /api/grpc/credentials endpoint"""
        try:
            # Test with sample credentials
            payload = {
                "authorization": "Bearer test-token-12345",
                "x_pop_token": "pop-token-67890"
            }
            response = requests.post(
                f"{self.base_url}/api/grpc/credentials",
                json=payload,
                headers={"Content-Type": "application/json"},
                timeout=10
            )
            
            if response.status_code == 200:
                data = response.json()
                
                if data.get("success"):
                    self.log_test("Set gRPC Credentials", True, f"Message: {data.get('message', 'Success')}")
                    return True
                else:
                    self.log_test("Set gRPC Credentials", False, f"Failed to set credentials: {data}")
                    return False
            elif response.status_code == 400:
                self.log_test("Set gRPC Credentials", False, "Bad request (400)")
                return False
            elif response.status_code == 503:
                self.log_test("Set gRPC Credentials", False, "gRPC client not initialized (503)")
                return False
            else:
                self.log_test("Set gRPC Credentials", False, f"HTTP {response.status_code}")
                return False
                
        except Exception as e:
            self.log_test("Set gRPC Credentials", False, f"Exception: {str(e)}")
            return False
    
    def test_grpc_initialize(self) -> Dict[str, Any]:
        """Test POST /api/grpc/initialize endpoint"""
        try:
            response = requests.post(
                f"{self.base_url}/api/grpc/initialize",
                headers={"Content-Type": "application/json"},
                timeout=15  # Longer timeout for initialization
            )
            
            if response.status_code == 200:
                data = response.json()
                
                if data.get("success"):
                    available_services = data.get("available_services", {})
                    environments = data.get("environments", [])
                    self.log_test("gRPC Initialize", True, f"Services: {list(available_services.keys())}, Environments: {environments}")
                    return data
                else:
                    error = data.get("error", "Unknown error")
                    validation = data.get("validation", {})
                    if "proto files are missing" in error.lower():
                        self.log_test("gRPC Initialize", True, f"Expected failure - proto files missing: {validation}")
                        return data  # This is expected behavior
                    else:
                        self.log_test("gRPC Initialize", False, f"Initialization failed: {error}")
                        return data
            elif response.status_code == 503:
                self.log_test("gRPC Initialize", False, "gRPC client not initialized (503)")
                return {}
            else:
                self.log_test("gRPC Initialize", False, f"HTTP {response.status_code}")
                return {}
                
        except Exception as e:
            self.log_test("gRPC Initialize", False, f"Exception: {str(e)}")
            return {}
    
    def test_grpc_service_endpoints(self) -> bool:
        """Test gRPC service endpoints (should fail gracefully without proto files)"""
        endpoints_to_test = [
            ("/api/grpc/ingress/upsert-content", {"content_data": {"test": "data"}}),
            ("/api/grpc/ingress/batch-create-assets", {"assets_data": [{"name": "test-asset"}]}),
            ("/api/grpc/ingress/batch-add-download-counts", {"player_id": "test-player", "content_ids": ["content-1"]}),
            ("/api/grpc/ingress/batch-add-ratings", {"rating_data": {"test": "rating"}}),
            ("/api/grpc/asset-storage/batch-get-signed-urls", {"asset_ids": ["asset-1", "asset-2"]}),
            ("/api/grpc/asset-storage/batch-update-statuses", {"asset_updates": [{"asset_id": "asset-1", "status": "active"}]})
        ]
        
        all_passed = True
        
        for endpoint, payload in endpoints_to_test:
            try:
                response = requests.post(
                    f"{self.base_url}{endpoint}",
                    json=payload,
                    headers={"Content-Type": "application/json"},
                    timeout=10
                )
                
                endpoint_name = endpoint.split("/")[-1].replace("-", " ").title()
                
                if response.status_code == 503:
                    # Expected when gRPC client is not initialized or proto files are missing
                    self.log_test(f"gRPC {endpoint_name}", True, "Expected 503 - gRPC client not ready")
                elif response.status_code == 500:
                    # Also expected when proto files are missing
                    self.log_test(f"gRPC {endpoint_name}", True, "Expected 500 - proto files missing")
                elif response.status_code == 200:
                    # Unexpected success (would mean proto files are present)
                    data = response.json()
                    self.log_test(f"gRPC {endpoint_name}", True, f"Unexpected success: {data}")
                else:
                    self.log_test(f"gRPC {endpoint_name}", False, f"Unexpected status: {response.status_code}")
                    all_passed = False
                    
            except Exception as e:
                self.log_test(f"gRPC {endpoint_name}", False, f"Exception: {str(e)}")
                all_passed = False
        
        return all_passed
    
    def run_comprehensive_test(self):
        """Run all backend tests"""
        print("🚀 Starting Kafka Trace Viewer Backend Tests")
        print(f"📍 Testing against: {self.base_url}")
        print("=" * 60)
        
        # Test 1: Health check
        health_ok = self.test_health_endpoint()
        
        if not health_ok:
            print("\n❌ Health check failed - stopping tests")
            return False
        
        # Test 2: Get traces
        traces_data = self.test_traces_endpoint()
        
        # Test 3: Test individual trace if traces exist
        if traces_data and traces_data.get("traces"):
            sample_trace_id = traces_data["traces"][0]["trace_id"]
            self.test_individual_trace(sample_trace_id)
            self.test_trace_flow(sample_trace_id)
        else:
            print("⚠️  No traces found - skipping individual trace tests")
        
        # Test 4: Topics graph
        self.test_topics_graph()
        
        # Test 5: Topics endpoint
        topics_data = self.test_topics_endpoint()
        
        # Test 6: Monitor topics (if topics exist)
        if topics_data and topics_data.get("all_topics"):
            # Test monitoring first 2 topics
            test_topics = topics_data["all_topics"][:2]
            self.test_monitor_topics(test_topics)
        
        # Test 7: Statistics
        self.test_statistics_endpoint()
        
        # Test 8: WebSocket connectivity
        self.test_websocket_connectivity()
        
        # gRPC Integration Tests
        print("\n" + "=" * 60)
        print("🔧 Starting gRPC Integration Tests")
        print("=" * 60)
        
        # Test 9: gRPC Status
        grpc_status = self.test_grpc_status()
        
        # Test 10: gRPC Environments
        environments_data = self.test_grpc_environments()
        
        # Test 11: Set gRPC Environment (if environments exist)
        if environments_data and environments_data.get("environments"):
            test_env = environments_data["environments"][0]  # Use first available environment
            self.test_grpc_set_environment(test_env)
            
            # Test 12: Set gRPC Credentials (after setting environment)
            self.test_grpc_credentials()
        else:
            print("⚠️  No gRPC environments found - skipping environment and credential tests")
        
        # Test 13: gRPC Initialize (test proto file validation)
        self.test_grpc_initialize()
        
        # Test 14: gRPC Service Endpoints (should handle missing proto files gracefully)
        self.test_grpc_service_endpoints()
        
        # Print summary
        print("\n" + "=" * 60)
        print(f"📊 Test Summary: {self.tests_passed}/{self.tests_run} tests passed")
        
        if self.tests_passed == self.tests_run:
            print("🎉 All backend tests passed!")
            return True
        else:
            failed_tests = [r for r in self.test_results if not r["success"]]
            print(f"❌ {len(failed_tests)} tests failed:")
            for test in failed_tests:
                print(f"   • {test['name']}: {test['details']}")
            return False

def main():
    """Main test execution"""
    tester = KafkaTraceViewerTester()
    success = tester.run_comprehensive_test()
    return 0 if success else 1

if __name__ == "__main__":
    sys.exit(main())